--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.3",
+    "firebase": "^11.0.2",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.5",
+    "react-country-state-city": "^1.1.6",
     "react-dom": "^18.3.1",
+    "react-phone-number-input": "^3.4.9",
     "react-scripts": "5.0.1",
+    "react-select-country-list": "^2.2.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
