--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-country-state-city": "^1.1.6",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-multi-select-component": "^4.3.4",
     "react-phone-number-input": "^3.4.9",
     "react-scripts": "5.0.1",
     "react-select-country-list": "^2.2.3",
